--- a/package.json
+++ b/package.json
@@ -5,14 +5,16 @@
   "keywords": [],
   "main": "src/index.tsx",
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-scripts": "^5.0.0",
-    "tailwindcss": "4.1.18"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "^5.0.1",
+    "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
-    "@types/react": "19.0.0",
-    "@types/react-dom": "19.0.0",
+    "@tailwindcss/postcss": "^3.3.2",
+    "autoprefixer": "^10.4.0",
+    "@types/react": "^18.0.37",
+    "@types/react-dom": "^18.0.11",
     "loader-utils": "3.2.1",
     "typescript": "4.9.5"
   },
